--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -27,3 +27,9 @@ jobs:
 
     - name: Test
       run: go test -v ./...
+    
+    - name: Upload Artifact
+        uses: actions/upload-artifact@v3.1.2
+        with: 
+          name: goApi
+          path: goApi
