--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -32,7 +32,7 @@ jobs:
       with:
          username: ${{ secrets.DOCKERHUB_USERNAME }}
          password: ${{ secrets.DOCKERHUB_PASSWORD }}
-         repository: aviv27400
+         repository: aviv27400/mark-dockers
          registry: hub.docker.com
          tag: 1.0.0
          
