--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -32,11 +32,11 @@ jobs:
       with:
          username: ${{ secrets.DOCKERHUB_USERNAME }}
          password: ${{ secrets.DOCKERHUB_PASSWORD }}
-         repository: aviv27400/mark-dockers
-         tag: 1.0.0
+         repository: aviv27400/pinger-api-go
+         tag: latest
          
     - name: Upload Artifact
       uses: actions/upload-artifact@v3.1.2
       with: 
-        name: goApi
-        path: goApi
+        name: pingerApi
+        path: pingerApi
