--- a/.github/workflows/go-build.yml
+++ b/.github/workflows/go-build.yml
@@ -27,13 +27,23 @@ jobs:
     - name: Test
       run: go test -v ./...
       
-    - name: build docker image
-      uses: zenato/docker-action@v1.0.0
+    - name: Get Version
+      run: |
+        cat VERSION > $VERSION
+        echo "VERSION=$VERSION" >> $GITHUB_ENV
+      
+    - name: Docker Login
+      uses: docker/login-action@v2.1.0
+      with: 
+        username: ${{ secrets.DOCKERHUB_USERNAME }}
+        password: ${{ secrets.DOCKERHUB_PASSWORD }}
+   
+    - name: Build and push Docker images
+      uses: docker/build-push-action@v4.0.0
       with:
-         username: ${{ secrets.DOCKERHUB_USERNAME }}
-         password: ${{ secrets.DOCKERHUB_PASSWORD }}
-         repository: aviv27400/pinger-api-go
-         tag: latest
+        tags: aviv27400/pinger-api-go:${{ env.VERSION }}, aviv27400/pinger-api-go:latest
+        file: Dockerfile
+        push: true
          
     - name: Upload Artifact
       uses: actions/upload-artifact@v3.1.2
