--- a/.github/workflows/go-build.yml
+++ b/.github/workflows/go-build.yml
@@ -29,8 +29,7 @@ jobs:
       
     - name: Get Version
       run: |
-        cat VERSION > $VERSION
-        echo "VERSION=$VERSION" >> $GITHUB_ENV
+        echo "VERSION=$(cat VERSION)" >> $GITHUB_ENV
       
     - name: Docker Login
       uses: docker/login-action@v2.1.0
